--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,18 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>bigdata.Main</mainClass>
+							<mainClass>bigdata.hadoop.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-client</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+	</dependencies>
 </project>
